--- a/package.json
+++ b/package.json
@@ -86,5 +86,11 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-typography": "^3.1.0",
     "typescript": "^5"
+  },
+  "prisma": {
+    "schemas": [
+      "./prisma/schema1.prisma",
+      "./prisma/schema2.prisma"
+    ]
   }
 }
